# tinker-blocks-rpi

./: .gitignore  IMG_PROCESSSING.py  README.md  Version1_NoNumbers.py  main.py  number_detection.py  ocr.py  process_controller.py  pyproject.toml  ws_server.py
camera/: CameraServer.py  capture.py
core/: __init__.py  config.py  process_controller.py  ws_server.py
image_processing/: Image.py  ImageOperations.py  OCR2Grid.py  __init__.py  image.py
image_processing/grid/: __init__.py  grid_square.py  perspective_grid.py
image_processing/models/: PerspectiveGrid.py  __init__.py
image_processing/ocr/: EasyOCR.py  EasyOCRClient.py  EasyOCRServer.py  __init__.py
models/: GridSquare.py  Image.py  ImageOperations.py  PerspectiveGrid.py  __init__.py
src/: conftest.py  main.py
src/assistant/: README.md  __init__.py  prompt.py  tools.py  workflow.py
src/core/: README.md  __init__.py  api_client.py  chat_model.py  config.py  process_controller.py  types.py  ws_server.py
src/engine/: README.md  __init__.py  commands.py  context.py  executor.py  hardware.py  interpreter.py  mappings.py  parser.py  state.py  types.py  workflow.py
src/tests/: __init__.py  demo_hardware_api.py  demo_param_handling.py  test_e2e_workflows.py  test_error_scenarios.py  test_integration_websocket.py  test_workflow_chaining.py
src/vision/: README.md  __init__.py  types.py  workflow.py
tests/: test_process_controller.py  test_workflow.py
vision/: __init__.py  tasks.py  workflow.py
vision/capture/: __init__.py  client.py  local.py  server.py
vision/grid/: __init__.py  mapper.py  (+1 more)
(+42 files in other folders)
