[tool.poetry]
name = "tinker-blocks-rpi"
version = "0.1.0"
description = ""
authors = ["Izzat Alsharif <work@izzatalsharif.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.11.4"
opencv-python = "^4.11.0.86"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
