[tool.poetry]
name = "tinker-blocks-rpi"
version = "0.1.0"
description = ""
authors = ["Izzat Alsharif <work@izzatalsharif.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.11.4"
opencv-python = "^4.11.0.86"
numpy = "^1.26.0"
websockets = "^12.0"
requests = "^2.31.0"
tabulate = "^0.9.0"
easyocr = "^1.7.0"
pytesseract = "^0.3.10"
flask = "^3.0.0"
depthai = "^2.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
